<resources>
    <string name="app_name">Messenger Firebase</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password_reg">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="reset_link_send">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message:</string>
</resources>